--- a/assets/scss/main/_media-queries.scss
+++ b/assets/scss/main/_media-queries.scss
@@ -23,6 +23,7 @@
   @include comments--laptop();
   @include single-post--laptop();
   @include page--laptop();
+  @include top-bar--laptop();
 }
 
 @media (min-width: #{$desktop}) {
